# big-number-calculator

./: .gitignore  CMakeLists.txt  README.md  big-number-calculator.sln  icon.icns  readme.txt
GUI/BlaCalculate.app/Contents/: Info.plist
GUI/BlaCalculate.app/Contents/MacOS/: BlaCalculate  libAppCore.dylib  libUltralight.dylib  libUltralightCore.dylib
app-icon/: icon_macOS.icns
assets/: app.html
big-number-calculator/: Blamath.cpp  Blamath.h  Decimal.cpp  Decimal.h  Integer.cpp  Integer.h  big-number-calculator.cpp  big-number-calculator.vcxproj  big-number-calculator.vcxproj.filters  main.cpp
cmake/: App.cmake
src/: Blamath.cpp  Blamath.h  Decimal.cpp  Decimal.h  Integer.cpp  Integer.h  MyApp.cpp  MyApp.h  main.cpp
